# FastAPI_for_Docx

./: .gitignore  .python-version  README.md  main.py  pyproject.toml  requirements.txt  techstack.md  techstack.yml
static/css/: main.css
templates/: form.html
